update dark mode + fixing the fitur

--- a/src/input.css
+++ b/src/input.css
@@ -7,13 +7,16 @@
 } */
 
 .navbar-fixed {
-  @apply fixed z-[9999] bg-white bg-opacity-80;
-  backdrop-filter: blur(5px);
+  @apply fixed z-[9999] bg-white bg-opacity-80 backdrop-blur-sm dark:bg-dark dark:bg-opacity-50;
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
 }
 
+#dark-toggle:checked ~ label div.toggle-circle {
+  @apply translate-x-3;
+}
+
 .hamburger-line {
-  @apply w-[30px] h-[2px] my-2 block bg-dark;
+  @apply w-[30px] h-[2px] my-2 block bg-dark dark:bg-white;
 }
 
 .hamburger-active > span:nth-child(1) {
